# aiogram-template

./: .example.env  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __main__.py  config.py  schemas.py  start.py
app/db/: repository.py
app/users/: dependencies.py  repositories.py  router.py
docker/: bot.Dockerfile
migrations/versions/: 2024_09_26_0213-63dc5d51ab29_.py
